# grog_audio_plugin_client

./: CMakeLists.txt  README.md
cmake/: target_lv2.cmake
examples/: CMakeLists.txt
examples/amp/: CMakeLists.txt  amp.cpp  amp.hpp
examples/synth/: CMakeLists.txt  synth.cpp  synth.hpp
formats/lv2/: CMakeLists.txt  grog_audio_plugin_client_lv2.cpp  lv2_client.cpp  lv2_client_definitions.hpp.in  manifest.ttl.in
formats/lv2/tools/: grog_lv2_metadata_generator.cpp
include/grog_audio_plugin_client/: allocator.hpp  audio_buffer.hpp  control_port.hpp  grog_audio_plugin_client.hpp  midi.hpp  midi_buffer.hpp
src/: allocator.cpp  audio_buffer.cpp  control_port.cpp  grog_audio_plugin_client.cpp  midi_buffer.cpp
